# ticket-assistant

./: .env  Dockerfile  main.py  pyproject.toml
notebooks/: test.ipynb
routes/: search.py
static/: index.html
